--- a/app/assets/stylesheets/admin/_static_line_course_calendar.sass
+++ b/app/assets/stylesheets/admin/_static_line_course_calendar.sass
@@ -7,7 +7,7 @@ $tile-borders: solid 0.05em #ccc
   margin-top: 0.7em
   border: $tile-borders
 
-.sl-course-calendar-tile
+.sl-course-calendar-tile, #sl-course-calendar-header > div
   width: 100% / $tile-width
   height: 5em
   border: $tile-borders
@@ -17,12 +17,13 @@ $tile-borders: solid 0.05em #ccc
   margin: 0
   color: #000
 
+  @include media(max-width 64em)
+    padding: 0.5em
+
+.sl-course-calendar-tile
   &:hover
     background-color: #fbffc6
     color: #000
-
-  @include media(max-width 64em)
-    padding: 0.5em
 
   @include media(max-width 50em)
     border: solid 0.05em #ccc
@@ -41,6 +42,20 @@ $tile-borders: solid 0.05em #ccc
     &:hover
       background-color: darken($today-colour, 15%)
 
+#sl-course-calendar-header > div
+  text-align: center
+  background-color: lighten($lsd-blue, 50%)
+  font-weight: bold
+  
+  .short-form
+    display: none
+
+  @include media(max-width 55em)
+    .full-form
+      display: none
+
+    .short-form
+      display: inline
 
 .sl-course-calendar-tile-info
   padding: 0.3em
