--- a/app/views/admin/course_calendar.scala.html
+++ b/app/views/admin/course_calendar.scala.html
@@ -39,6 +39,36 @@
     </div>
 
     <div id="sl-course-calendar">
+      <div id="sl-course-calendar-header">
+        <div>
+          <span class="full-form">Monday</span>
+          <span class="short-form">Mon</span>
+        </div>
+        <div>
+          <span class="full-form">Tuesday</span>
+          <span class="short-form">Tue</span>
+        </div>
+        <div>
+          <span class="full-form">Wednesday</span>
+          <span class="short-form">Wed</span>
+        </div>
+        <div>
+          <span class="full-form">Thursday</span>
+          <span class="short-form">Thur</span>
+        </div>
+        <div>
+          <span class="full-form">Friday</span>
+          <span class="short-form">Fri</span>
+        </div>
+        <div>
+          <span class="full-form">Saturday</span>
+          <span class="short-form">Sat</span>
+        </div>
+        <div>
+          <span class="full-form">Sunday</span>
+          <span class="short-form">Sun</span>
+        </div>
+      </div>
       @for(tile <- tiles) {
         <a href="#" class="sl-course-calendar-tile @{if(tile.isPreviousMonth || tile.isNextMonth) "tile-other-month" else if(tile.isToday) "tile-today"}" title="@tile.date.toString(dateFormatter)">
           <span class="sl-course-calendar-tile-day">@tile.date.dayOfMonth().get()</span>
