Got the navigation and basic routes for sign-up working.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,12 +2,8 @@
   <div id="small-header">
     <nav>
       <ul>
-        <li role="presentation" class="#">
-          <a href="#">Main</a>
-        </li>
-        <li role="presentation" class="#">
-          <a href="#">Alt</a>
-        </li>
+        <nav-item href="/sign-up" link-text="Main"></nav-item>
+        <nav-item href="/sign-up/alt" link-text="Alt"></nav-item>
       </ul>
     </nav>
     <img id="logo" src="assets/images/header.png" title="Leeds University Skydivers" alt="Leeds University Skydivers logo">
