--- a/frontend/src/app/admin/admin-base.component.html
+++ b/frontend/src/app/admin/admin-base.component.html
@@ -2,9 +2,9 @@
   <div id="nav-container">
     <nav>
       <ul>
-        <nav-item href="/admin" link-text="Home"></nav-item>
-        <nav-item href="/admin/courses/calendar" link-text="Courses"></nav-item>
-        <nav-item href="/admin/settings" link-text="Settings"></nav-item>
+        <nav-item href="/admin" linkText="Home"></nav-item>
+        <nav-item href="/admin/courses/calendar" linkText="Courses"></nav-item>
+        <nav-item href="/admin/settings" linkText="Settings"></nav-item>
       </ul>
     </nav>
 
