--- a/frontend/src/app/signup/signup-base.component.html
+++ b/frontend/src/app/signup/signup-base.component.html
@@ -2,8 +2,8 @@
   <div id="small-header">
     <nav>
       <ul>
-        <nav-item href="/sign-up" link-text="Main"></nav-item>
-        <nav-item href="/sign-up/alt" link-text="Alt"></nav-item>
+        <nav-item href="/sign-up" linkText="Main"></nav-item>
+        <nav-item href="/sign-up/alt" linkText="Alt"></nav-item>
       </ul>
     </nav>
     <img id="logo" src="assets/images/header.png" title="Leeds University Skydivers" alt="Leeds University Skydivers logo">
