Wired up the currently selected month.

--- a/frontend/src/app/admin/courses/course-calendar.component.html
+++ b/frontend/src/app/admin/courses/course-calendar.component.html
@@ -8,7 +8,7 @@
 
     <div id="sl-course-calendar-filter">
       <label for="calendar-filter-month">Month</label>
-      <select id="calendar-filter-month" name="calendar-filter-month">
+      <select id="calendar-filter-month" name="calendar-filter-month" [value]="currentMonth.toISOString()">
         <option *ngFor="let month of months" [value]="month.toISOString()">
           {{month.format('YYYY - MMMM')}}
         </option>
