--- a/frontend/src/app/admin/courses/course-calendar.component.html
+++ b/frontend/src/app/admin/courses/course-calendar.component.html
@@ -60,20 +60,7 @@
       </div>
     </div>
 
-    <!-- @{if(tile.isPreviousMonth || tile.isNextMonth) "tile-other-month" else if(tile.isToday) "tile-today"}" -->
-    <!-- @tile.date.toString(dateFormatter) -->
-    <!-- @tile.date.dayOfMonth().get() -->
-    <a href="#" class="sl-course-calendar-tile" title="{{tile.date.format('dddd, MMMM Do YYYY')}}" *ngFor="let tile of tiles">
-      <span class="sl-course-calendar-tile-day">{{tile.date.date()}}</span>
-
-      <div class="sl-course-calendar-tile-info course-full" title="0 Spaces left on this course">
-        0 <span class="course-word-spaces">Spaces</span>
-      </div>
-
-      <div class="sl-course-calendar-tile-info course-spaces" title="7 Spaces left on this course">
-        7 <span class="course-word-spaces">Spaces</span>
-      </div>
-    </a>
+    <calendar-tile *ngFor="let tile of tiles" [tile]="tile"></calendar-tile>
 
     <div class="clear"></div>
   </div>
