--- a/frontend/src/css/admin/_static_line_course_calendar.sass
+++ b/frontend/src/css/admin/_static_line_course_calendar.sass
@@ -46,7 +46,7 @@ $tile-borders: solid 0.05em #ccc
   text-align: center
   background-color: lighten($lsd-blue, 50%)
   font-weight: bold
-  
+
   .short-form
     display: none
 
@@ -74,23 +74,23 @@ $tile-borders: solid 0.05em #ccc
     .course-word-spaces
       display: none
 
-#sl-course-calendar-navigation
+.sl-course-calendar-navigation
   text-align: center
   padding: 0.3em
   margin-top: 0.5em
   background-color: lighten($lsd-yellow, 35%)
-  
-#sl-course-calendar-nav-left, #sl-course-calendar-filter, #sl-course-calendar-nav-right
+
+.sl-course-calendar-nav-left, #sl-course-calendar-filter, .sl-course-calendar-nav-right
   display: inline-block
 
-#sl-course-calendar-nav-left, #sl-course-calendar-nav-right
+.sl-course-calendar-nav-left, .sl-course-calendar-nav-right
   font-size: 2em
 
-#sl-course-calendar-nav-left
+.sl-course-calendar-nav-left
   float: left
   margin: 0.1em 0 0 0.4em
 
-#sl-course-calendar-nav-right
+.sl-course-calendar-nav-right
   float: right
   margin: 0.1em 0.4em 0 0
 
