--- a/frontend/src/app/utils/nav.component.html
+++ b/frontend/src/app/utils/nav.component.html
@@ -1,3 +1,3 @@
-<li role="presentation" class="#">
-  <a [routerLink]="href" [innerText]="linkText" [routerLinkActive]="['active']"></a>
+<li role="presentation">
+  <a [routerLink]="href" [innerText]="linkText" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"></a>
 </li>
