--- a/frontend/src/app/signup/signup-alt.component.html
+++ b/frontend/src/app/signup/signup-alt.component.html
@@ -4,16 +4,30 @@
   </ul>
 
   <div id="sign-up-form">
+    <form (ngSubmit)="signup()" #signupForm="ngForm">
       <div>
         <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="My name is ________ and I love skydiving!" value="">
+        <input type="text" id="name" name="name"
+          [(ngModel)]="user.name" required #name="ngModel"
+          placeholder="My name is ________ and I love skydiving!" value="">
+
+        <div [hidden]="name.valid || name.pristine" class="form-field-error">
+          Please enter a name
+        </div>
       </div>
 
       <div>
-         <label for="email_address">E-mail address</label>
-         <input type="text" id="email_address" name="email_address" placeholder="Your main e-mail address, not the uni one please." value="">
+         <label for="email">E-mail address</label>
+         <input type="text" id="email" name="email"
+          [(ngModel)]="user.email" required #email="ngModel"
+          placeholder="Your main e-mail address, not the uni one please." value="">
+
+         <div [hidden]="email.valid || email.pristine" class="form-field-error">
+           Please enter a valid e-mail address
+         </div>
       </div>
 
-      <button type="submit">Sign me up!</button>
+      <button type="submit" [disabled]="!signupForm.form.valid">Sign me up!</button>
+    </form>
   </div>
 </div>
