Moved to new forms library. Added basic name and e-mail validation.

--- a/frontend/src/app/signup/signup-alt.component.html
+++ b/frontend/src/app/signup/signup-alt.component.html
@@ -4,30 +4,31 @@
   </ul>
 
   <div id="sign-up-form">
-    <form (ngSubmit)="signup()" #signupForm="ngForm">
+    <form (ngSubmit)="signup()" [formGroup]="signupForm">
       <div>
         <label for="name">Name</label>
         <input type="text" id="name" name="name"
-          [(ngModel)]="user.name" required #name="ngModel"
+          formControlName="name" required
           placeholder="My name is ________ and I love skydiving!" value="">
 
-        <div [hidden]="name.valid || name.pristine" class="form-field-error">
+        <div [hidden]="ctrlName.valid || ctrlName.untouched" class="form-field-error" id="name-form-field-error">
           Please enter a name
         </div>
       </div>
 
       <div>
          <label for="email">E-mail address</label>
-         <input type="text" id="email" name="email"
-          [(ngModel)]="user.email" required #email="ngModel"
+         <input type="email" id="email" name="email"
+          formControlName="email" required
           placeholder="Your main e-mail address, not the uni one please." value="">
 
-         <div [hidden]="email.valid || email.pristine" class="form-field-error">
+         <div [hidden]="ctrlEmail.valid || ctrlEmail.untouched" class="form-field-error" id="email-form-field-error">
            Please enter a valid e-mail address
          </div>
       </div>
 
-      <button type="submit" [disabled]="!signupForm.form.valid">Sign me up!</button>
+      <button type="submit" [disabled]="!signupForm.valid">Sign me up!</button>
     </form>
+    <p>{{cgValue}}</p>
   </div>
 </div>
