--- a/frontend/src/css/application.sass
+++ b/frontend/src/css/application.sass
@@ -71,9 +71,10 @@ nav
 #go-back-btn
   @extend button
 
-.error-message
+.form-field-error
   @include error-box
   padding: 0.3em 0.5em
+  margin-bottom: 1em
 
 footer
   margin-top: 1em
