--- a/frontend/src/app/signup/signup-alt.component.html
+++ b/frontend/src/app/signup/signup-alt.component.html
@@ -20,7 +20,7 @@
          <label for="email">E-mail address</label>
          <input type="email" id="email" name="email"
           formControlName="email" required
-          placeholder="Your main e-mail address, not the uni one please." value="">
+          placeholder="Your main (non-uni) e-mail address" value="">
 
          <div [hidden]="ctrlEmail.valid || ctrlEmail.untouched" class="form-field-error" id="email-form-field-error">
            Please enter a valid e-mail address
