--- a/frontend/src/css/base/_variables.scss
+++ b/frontend/src/css/base/_variables.scss
@@ -4,10 +4,12 @@ $large-screen: 900px;
 
 // Typography
 $base-font-family: 'Patrick Hand SC', cursive;
+$form-font-family: 'Open Sans', sans-serif;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
 $base-font-size: 1em;
+$form-font-size: 1em;
 
 // Line height
 $base-line-height: 1.5;
