Added a touch of spacing before submit buttons.

--- a/frontend/src/css/application.sass
+++ b/frontend/src/css/application.sass
@@ -76,6 +76,9 @@ nav
   padding: 0.3em 0.5em
   margin-bottom: 1em
 
+input[type=submit], button[type=submit]
+  margin-top: 0.5em
+
 footer
   margin-top: 1em
   text-align: center
