Fixed e2e tests. Finished upgrading sign-up.

--- a/frontend/src/app/signup/signup-alt.component.html
+++ b/frontend/src/app/signup/signup-alt.component.html
@@ -7,9 +7,8 @@
     <form (ngSubmit)="signup()" [formGroup]="signupForm">
       <div>
         <label for="name">Name</label>
-        <input type="text" id="name" name="name"
-          formControlName="name" required
-          placeholder="My name is ________ and I love skydiving!" value="">
+        <input type="text" id="name" name="name" formControlName="name" required value=""
+          placeholder="My name is ________ and I love skydiving!">
 
         <div [hidden]="ctrlName.valid || ctrlName.untouched" class="form-field-error" id="name-form-field-error">
           Please enter a name
@@ -18,9 +17,8 @@
 
       <div>
          <label for="email">E-mail address</label>
-         <input type="email" id="email" name="email"
-          formControlName="email" required
-          placeholder="Your main (non-uni) e-mail address" value="">
+         <input type="email" id="email" name="email" formControlName="email" required value=""
+           placeholder="Your main (non-uni) e-mail address">
 
          <div [hidden]="ctrlEmail.valid || ctrlEmail.untouched" class="form-field-error" id="email-form-field-error">
            Please enter a valid e-mail address
