--- a/frontend/src/app/admin/courses/tile.component.html
+++ b/frontend/src/app/admin/courses/tile.component.html
@@ -7,12 +7,12 @@
 
   <span class="sl-course-calendar-tile-day">{{tile.date.date()}}</span>
 
-  <!--
-  <div class="sl-course-calendar-tile-info course-full" title="0 Spaces left on this course">
-    0 <span class="course-word-spaces">Spaces</span>
+  <div class="sl-course-calendar-tile-course" *ngFor="let course of tile.courses">
+    <div class="sl-course-calendar-tile-info course-full" title="Course full with {{course.totalSpaces}} taken" *ngIf="course.spacesFree == 0">
+      <span class="course-word-spaces">Full</span> ({{course.totalSpaces}})
+    </div>
+    <div class="sl-course-calendar-tile-info course-spaces" title="{{course.spacesFree}} Spaces left on this course" *ngIf="course.spacesFree >= 1">
+      {{course.spacesFree}}/{{course.totalSpaces}} <span class="course-word-spaces">Spaces</span>
+    </div>
   </div>
-
-  <div class="sl-course-calendar-tile-info course-spaces" title="7 Spaces left on this course">
-    7 <span class="course-word-spaces">Spaces</span>
-  </div>-->
 </a>
