--- a/frontend/src/app/signup/thank-you.component.html
+++ b/frontend/src/app/signup/thank-you.component.html
@@ -6,7 +6,7 @@
   <div class="video">
     <div class="video-wrapper">
         <video autoplay loop>
-          <source src="videos/hell-yeah.mp4" type="video/mp4" />
+          <source src="/assets/videos/hell-yeah.mp4" type="video/mp4" />
         </video>
     </div>
   </div>
