--- a/frontend/src/assets/css/application.sass
+++ b/frontend/src/assets/css/application.sass
@@ -75,6 +75,7 @@ nav
   @include error-box
   padding: 0.3em 0.5em
   margin-bottom: 1em
+  font-size: 1.3em
 
 input[type=submit], button[type=submit]
   margin-top: 0.5em
@@ -84,3 +85,5 @@ footer
   text-align: center
   color: #666
   font-size: 0.9em
+
+@import throbber
