--- a/frontend/src/app/signup/main/signup.component.html
+++ b/frontend/src/app/signup/main/signup.component.html
@@ -1,10 +1,10 @@
 <div id="intro-hero">
-  <ul>
-    <li *ngFor="let error of errors">{{ error }}</li>
-  </ul>
+  <div *ngIf="apiRequestFailed" class="form-field-error">
+    An unknown error occurred #sadtimes #turnitoffandonagain
+  </div>
 
   <div id="sign-up-form">
-    <form (ngSubmit)="signup()" [formGroup]="signupForm">
+    <form [formGroup]="signupForm">
       <div>
         <label for="name">Name</label>
         <input type="text" id="name" name="name" formControlName="name" required value=""
@@ -12,6 +12,10 @@
 
         <div [hidden]="ctrlName.valid || ctrlName.untouched" class="form-field-error" id="name-form-field-error">
           Please enter a name
+        </div>
+
+        <div *ngIf="errors && errors.name" class="form-field-error">
+          {{translate(errors.name)}}
         </div>
       </div>
 
@@ -23,9 +27,14 @@
         <div [hidden]="ctrlPhoneNumber.valid || ctrlPhoneNumber.untouched" class="form-field-error" id="phone-number-form-field-error">
           Please enter a valid phone number
         </div>
+
+        <div *ngIf="errors && errors.phoneNumber" class="form-field-error">
+          {{translate(errors.phoneNumber)}}
+        </div>
       </div>
 
-      <button type="submit" [disabled]="!signupForm.valid">Sign me up!</button>
+      <button type="button" (click)="signup(signupForm.value)" [disabled]="!signupForm.valid">Sign me up!</button>
+      <span [ngClass]="{visible: showThrobber}" class="throbber"></span>
     </form>
   </div>
 </div>
