--- a/frontend/src/app/admin/courses/course-view/course-view.component.html
+++ b/frontend/src/app/admin/courses/course-view/course-view.component.html
@@ -3,16 +3,19 @@
 
   <dl id="sl-course-info">
     <dt>Date</dt>
-    <dd>31/09/16</dd>
+    <dd>{{ formatDate(course?.course?.date) }}</dd>
 
     <dt>Organiser</dt>
-    <dd>Jim Dickinson</dd>
+    <dd>{{ course?.organiser?.name }}</dd>
+
+    <dt>Secondary organiser</dt>
+    <dd>{{ course?.secondaryOrganiser?.name || 'None' }}</dd>
 
     <dt>Status</dt>
-    <dd>Pending</dd>
+    <dd>{{ translateStatus(course?.course?.status) }}</dd>
 
     <dt># Spaces</dt>
-    <dd>8</dd>
+    <dd>{{ spaces?.length }}</dd>
   </dl>
 
   <div class="clear"></div>
@@ -33,87 +36,22 @@
     </thead>
 
     <tbody>
-      <tr>
-        <td class="sl-course-students-id">1</td>
-        <td class="sl-course-students-name">Danielle Chadwick</td>
-        <td class="sl-course-students-date-joined">08/09/16</td>
+      <tr *ngFor="let space of spaces">
+        <td class="sl-course-students-id">{{ space.number }}</td>
+        <td class="sl-course-students-name">{{ space.member?.name || 'N/A' }}</td>
+        <td class="sl-course-students-date-joined">{{ space.member?.createdAt || '' }}</td>
         <td class="sl-course-students-info-complete"><i class="fa fa-times" aria-hidden="true" style="color: red;"></i></td>
         <td class="sl-course-students-forms-complete"><i class="fa fa-check" aria-hidden="true" style="color: green;"></i></td>
         <td class="sl-course-students-reg-langar"><i class="fa fa-times" aria-hidden="true" style="color: red;"></i></td>
         <td class="sl-course-students-options">
-          <button type="button" title="Contact student" class="sl-course-students-contact"><i class="fa fa-phone" aria-hidden="true"></i></button>
-          <button type="button" title="Edit member information" class="sl-course-students-edit-member"><i class="fa fa-pencil" aria-hidden="true"></i></button>
-          <button type="button" class="btn-warning sl-course-students-remove" title="Remove from course"><i class="fa fa-trash-o"></i></button>
-        </td>
-      </tr>
-
-      <tr>
-        <td class="sl-course-students-id">2</td>
-        <td class="sl-course-students-name">Finley Bentley</td>
-        <td class="sl-course-students-date-joined">01/09/16</td>
-        <td class="sl-course-students-info-complete"><i class="fa fa-check" aria-hidden="true" style="color: green;"></i></td>
-        <td class="sl-course-students-forms-complete"><i class="fa fa-check" aria-hidden="true" style="color: green;"></i></td>
-        <td class="sl-course-students-reg-langar"><i class="fa fa-times" aria-hidden="true" style="color: red;"></i></td>
-        <td class="sl-course-students-options">
-          <button type="button" title="Contact student" class="sl-course-students-contact"><i class="fa fa-phone" aria-hidden="true"></i></button>
-          <button type="button" title="Edit member information" class="sl-course-students-edit-member"><i class="fa fa-pencil" aria-hidden="true"></i></button>
-          <button type="button" class="btn-warning sl-course-students-remove" title="Remove from course"><i class="fa fa-trash-o"></i></button>
-        </td>
-      </tr>
-
-      <tr>
-        <td class="sl-course-students-id">3</td>
-        <td class="sl-course-students-name">Cameron Tyler</td>
-        <td class="sl-course-students-date-joined">10/09/16</td>
-        <td class="sl-course-students-info-complete"><i class="fa fa-times" aria-hidden="true" style="color: red;"></i></td>
-        <td class="sl-course-students-forms-complete"><i class="fa fa-check" aria-hidden="true" style="color: green;"></i></td>
-        <td class="sl-course-students-reg-langar"><i class="fa fa-times" aria-hidden="true" style="color: red;"></i></td>
-        <td class="sl-course-students-options">
-          <button type="button" title="Contact student" class="sl-course-students-contact"><i class="fa fa-phone" aria-hidden="true"></i></button>
-          <button type="button" title="Edit member information" class="sl-course-students-edit-member"><i class="fa fa-pencil" aria-hidden="true"></i></button>
-          <button type="button" class="btn-warning sl-course-students-remove" title="Remove from course"><i class="fa fa-trash-o"></i></button>
-        </td>
-      </tr>
-
-      <tr>
-        <td class="sl-course-students-id">4</td>
-        <td class="sl-course-students-name">Joseph Briggs</td>
-        <td class="sl-course-students-date-joined">01/09/16</td>
-        <td class="sl-course-students-info-complete"><i class="fa fa-check" aria-hidden="true" style="color: green;"></i></td>
-        <td class="sl-course-students-forms-complete"><i class="fa fa-check" aria-hidden="true" style="color: green;"></i></td>
-        <td class="sl-course-students-reg-langar"><i class="fa fa-times" aria-hidden="true" style="color: red;"></i></td>
-        <td class="sl-course-students-options">
-          <button type="button" title="Contact student" class="sl-course-students-contact"><i class="fa fa-phone" aria-hidden="true"></i></button>
-          <button type="button" title="Edit member information" class="sl-course-students-edit-member"><i class="fa fa-pencil" aria-hidden="true"></i></button>
-          <button type="button" class="btn-warning sl-course-students-remove" title="Remove from course"><i class="fa fa-trash-o"></i></button>
-        </td>
-      </tr>
-
-      <tr>
-        <td class="sl-course-students-id">5</td>
-        <td colspan="6">
-          <button type="button" class="btn btn-primary">Add</button>
-        </td>
-      </tr>
-
-      <tr>
-        <td class="sl-course-students-id">6</td>
-        <td colspan="6">
-          <button type="button" class="btn btn-primary">Add</button>
-        </td>
-      </tr>
-
-      <tr>
-        <td class="sl-course-students-id">7</td>
-        <td colspan="6">
-          <button type="button" class="btn btn-primary">Add</button>
-        </td>
-      </tr>
-
-      <tr>
-        <td class="sl-course-students-id">8</td>
-        <td colspan="6">
-          <button type="button" class="btn btn-primary">Add</button>
+          <div *ngIf="space.member">
+            <button type="button" title="Contact student" class="sl-course-students-contact"><i class="fa fa-phone" aria-hidden="true"></i></button>
+            <button type="button" title="Edit member information" class="sl-course-students-edit-member"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+            <button type="button" class="btn-warning sl-course-students-remove" title="Remove from course"><i class="fa fa-trash-o"></i></button>
+          </div>
+          <div *ngIf="!space.member">
+            <button type="button" title="Add member" class="sl-course-students-add-member"><i class="fa fa-user-plus" aria-hidden="true"></i></button>
+          </div>
         </td>
       </tr>
     </tbody>
