--- a/frontend/src/app/admin/courses/tile.component.html
+++ b/frontend/src/app/admin/courses/tile.component.html
@@ -1,7 +1,7 @@
 <!-- @{if(tile.isPreviousMonth || tile.isNextMonth) "tile-other-month" else if(tile.isToday) "tile-today"}" -->
 <!-- @tile.date.toString(dateFormatter) -->
 <!-- @tile.date.dayOfMonth().get() -->
-<a href="#"
+<div
   class="sl-course-calendar-tile {{otherClasses()}}"
   [title]="tile.date.format('dddd, MMMM Do YYYY')">
 
@@ -12,7 +12,7 @@
       <span class="course-word-spaces">Full</span> ({{course.totalSpaces}})
     </div>
     <div class="sl-course-calendar-tile-info course-spaces" title="{{course.spacesFree}} Spaces left on this course" *ngIf="course.spacesFree >= 1">
-      {{course.spacesFree}}/{{course.totalSpaces}} <span class="course-word-spaces">Spaces</span>
+      <a [routerLink]="['/admin/courses/', course.course.uuid]">{{course.spacesFree}}/{{course.totalSpaces}} <span class="course-word-spaces">Spaces</span></a>
     </div>
   </div>
-</a>
+</div>
