--- a/frontend/src/app/signup/signup-base.component.html
+++ b/frontend/src/app/signup/signup-base.component.html
@@ -9,7 +9,7 @@
       </nav>
 
       <a [routerLink]="['/']" title="Home">
-        <img id="logo" src="assets/images/header.png" title="Leeds University Skydivers" alt="Leeds University Skydivers logo">
+        <img id="logo" src="/assets/images/header.png" title="Leeds University Skydivers" alt="Leeds University Skydivers logo">
       </a>
     </div>
 
