Corrected width of calendar month select.

--- a/frontend/src/assets/css/admin/_static_line_course_calendar.sass
+++ b/frontend/src/assets/css/admin/_static_line_course_calendar.sass
@@ -106,3 +106,6 @@ $tile-borders: solid 0.05em #ccc
     padding: 0.3em
     font-size: 0.9em
     margin-bottom: 0.3em
+
+#calendar-filter-month
+  width: auto
