--- a/frontend/src/assets/css/admin/_member_search.sass
+++ b/frontend/src/assets/css/admin/_member_search.sass
@@ -19,3 +19,6 @@
       &:hover
         background: lighten($lsd-yellow, 45%)
         color: #000
+
+#more-search-results-button
+  margin-top: 1em
