Wired up adding a member to a course.

--- a/frontend/src/app/admin/courses/course-view/course-view.component.html
+++ b/frontend/src/app/admin/courses/course-view/course-view.component.html
@@ -72,6 +72,6 @@
 
     <p>Search for a member below to add to this course.</p>
 
-    <lsd-member-search></lsd-member-search>
+    <lsd-member-search (memberSelected)="addMemberToCourse($event)"></lsd-member-search>
   </div>
 </div>
