--- a/frontend/src/assets/css/admin/_member_search.sass
+++ b/frontend/src/assets/css/admin/_member_search.sass
@@ -20,5 +20,8 @@
         background: lighten($lsd-yellow, 45%)
         color: #000
 
+      &.chosen
+        color: darken(#eee, 20%)
+
 #more-search-results-button
   margin-top: 1em
