--- a/frontend/src/app/admin/login/login.component.html
+++ b/frontend/src/app/admin/login/login.component.html
@@ -1,4 +1,6 @@
-<div id="login-hero">
+<div id="full-column">
+  <h2>Login</h2>
+
   <div *ngIf="apiRequestFailed" class="form-field-error">
     An unknown error occurred #sadtimes #turnitoffandonagain
   </div>
