--- a/frontend/src/assets/css/_base.sass
+++ b/frontend/src/assets/css/_base.sass
@@ -2,10 +2,7 @@
 @import 'neat/neat'
 @import 'base/base'
 @import 'font-awesome/font-awesome'
-
-$lsd-blue: #009dd9
-$lsd-yellow: #fdda00
-$lsd-red: #ea0005
+@import 'variables'
 
 @mixin error-box
   background: lighten($lsd-red, 40%)
@@ -32,6 +29,19 @@ form
     margin-bottom: 0.5em
     border-radius: 0.25em
     @include error-box
+
+a
+  color: lighten($lsd_blue, 10%)
+
+  @include transition(color 0.2s)
+
+  &:hover
+    color: darken($lsd_blue, 10%)
+
+h1, h2, h3, h4
+  font-family: "Bangers", sans-serif
+  letter-spacing: 0.08em
+  font-weight: 300
 
 // Source: http://refills.bourbon.io/components/
 .video-wrapper
