Adjusted default fonts - still needs work.
Aim is to produce something that's much more readable and consistent
over new and old components. Will continue tweaking this as I move the
old static content into this site.

--- a/frontend/src/assets/css/base/_variables.scss
+++ b/frontend/src/assets/css/base/_variables.scss
@@ -3,9 +3,9 @@ $medium-screen: 600px;
 $large-screen: 900px;
 
 // Typography
-$base-font-family: 'Patrick Hand SC', cursive;
+$base-font-family: 'Open Sans', sans-serif;
 $form-font-family: 'Open Sans', sans-serif;
-$heading-font-family: $base-font-family;
+$heading-font-family: 'Patrick Hand SC', cursive;
 
 // Font Sizes
 $base-font-size: 1em;
