Improved header styling.

--- a/frontend/src/app/pages/base/base.component.html
+++ b/frontend/src/app/pages/base/base.component.html
@@ -6,12 +6,7 @@
   </div>
 
   <div id="header-title">
-    <h1>
-      <span class="lu">
-        Leeds Uni
-      </span>
-      Skydivers
-    </h1>
+    <h1>Leeds Uni Skydivers</h1>
 
     <div id="twitter-icon">
       <a href="https://twitter.com/LeedsSkyDivers" title="Leeds Skydivers on Twitter">
