--- a/frontend/src/app/pages/base/base.component.sass
+++ b/frontend/src/app/pages/base/base.component.sass
@@ -21,32 +21,28 @@ $header-breakpoint: max-width 40em
 #header-logo
   @include span-columns(4)
 
-  img
-    width: 100%
-
   @include media($header-breakpoint)
     @include span-columns(12)
+    text-align: center
 
 #header-title
   @include span-columns(8)
 
+  padding-top: 0.7em
+
   h1
-    font-size: 6.8rem
+    font-size: 5rem
     line-height: 0.8em
     font-family: 'Leckerli One', cursive
     font-weight: 300
     text-align: center
-    margin: 0
+    margin: 0 -1em 0 0
 
-    @include media(max-width 50em)
-      font-size: 5.0rem
+    @include media(max-width 76em)
+      margin: 0
 
     @include media(max-width 30em)
       font-size: 3.5rem
-
-    .lu
-      font-size: 0.6em
-      line-height: 0.9em
 
   @include media(max-width 40rem)
     @include span-columns(12)
