--- a/frontend/src/app/pages/home/home.component.sass
+++ b/frontend/src/app/pages/home/home.component.sass
@@ -6,10 +6,14 @@
 // Intro snippet
 #intro-snippet
   @include flash($notice-colour)
+  padding: 0.5em
   text-align: center
   font-size: 2.5em
   font-style: italic
   margin-bottom: 1rem
+
+  a
+    text-decoration: underline
 
   p
     margin: 0
