Small re-wording and style fixes.

--- a/frontend/src/app/pages/about/about.component.html
+++ b/frontend/src/app/pages/about/about.component.html
@@ -7,13 +7,15 @@
 </div>
 
 <p>
-  The Leeds University Skydiving Society is part of the Outdoor Societies at the Leeds University Union. We welcome members from all Leeds and surrounding Universities, including Alumnis.
+  The Leeds University Skydiving Society is part of the Outdoor Societies at the Leeds University Union. We welcome
+  members from all Leeds and surrounding Universities, including Alumnis.
 </p>
 
 <p>
-  Our current home dropzone is <a href="http://www.bpslangar.co.uk/">BPS Langar</a>, situated just outside of Nottingham.
-  The dropzone is the largest civilian dropzone in the UK, hosting tandems and fun jumpers every day of the year (except Christmas Day).
-  The dropzone also hosts Nottingham, Birmingham, Warwick and Loughborough University Skydiving Teams, therefore there are always lots of new students to meet.
+  Our current home dropzone is <a href="http://www.britishparachuteschools.com/">BPS Langar</a>, situated just outside
+  of Nottingham. The dropzone is the largest civilian dropzone in the UK, hosting tandems and fun jumpers every day of
+  the year (except Christmas Day). The dropzone also hosts Nottingham, Birmingham, Warwick and Loughborough University
+  Skydiving Teams, ensuring there are always lots of new students to meet.
 </p>
 
 <p>
