--- a/frontend/src/app/pages/committee/committee.component.html
+++ b/frontend/src/app/pages/committee/committee.component.html
@@ -2,7 +2,7 @@
   <h2>Committee</h2>
 
   <p>
-    We're the guys &amp; gals that are here to get you in the air! Need to get in touch? <a href="/contact">Contact us.</a>
+    We're the guys &amp; gals that are here to get you in the air! Need to get in touch? <a [routerLink]="['/contact']">Contact us.</a>
   </p>
 
   <ul id="committee-list">
