--- a/frontend/src/app/pages/contact/contact.component.html
+++ b/frontend/src/app/pages/contact/contact.component.html
@@ -7,7 +7,10 @@
 
   <dl>
     <dt>
-      <a href="https://www.facebook.com/groups/shockabrah">Facebook group</a>
+      <a href="https://www.facebook.com/groups/shockabrah">
+        <i class="fa fa-facebook-square"></i>
+        Facebook group
+      </a>
     </dt>
     <dd>
       Join our group and a member of the committee should message you letting you know about how to get involved with the club.
@@ -17,19 +20,30 @@
     </dd>
 
     <dt>
-      <a href="https://twitter.com/LeedsSkyDivers">Twitter</a>
+      <a href="https://twitter.com/LeedsSkyDivers">
+        <i class="fa fa-twitter-square"></i>
+        Twitter
+      </a>
     </dt>
+
     <dd>
       Tweet us a question!
     </dd>
     <dt>
-      <a href="https://www.facebook.com/leedsuniskydivers">Facebook page</a>
+      <a href="https://www.facebook.com/leedsuniskydivers">
+        <i class="fa fa-facebook-square"></i>
+        Facebook page
+      </a>
     </dt>
     <dd>
       Like our page then send us a message.
     </dd>
+
     <dt>
-      <a href="mailto:leedsskydivers@gmail.com">E-mail</a>
+      <a href="mailto:leedsskydivers@gmail.com">
+        <i class="fa fa-envelope"></i>
+        E-mail
+      </a>
     </dt>
     <dd>
       If nothing above works for you, send us an e-mail.
