Removed events link for now.

--- a/frontend/src/app/pages/base/base.component.html
+++ b/frontend/src/app/pages/base/base.component.html
@@ -27,16 +27,13 @@
     <li class="controls">
       <a href="#">
         <i class="fa fa-bars"></i>
-        <span>
-              Show menu
-            </span>
+        <span>Show menu</span>
       </a>
     </li>
 
     <page-nav-item href="/" linkText="Home"></page-nav-item>
     <page-nav-item href="/about-the-club" linkText="About the club"></page-nav-item>
     <page-nav-item href="/committee" linkText="Committee"></page-nav-item>
-    <page-nav-item href="/events" linkText="Events"></page-nav-item>
     <page-nav-item href="/prices" linkText="Prices"></page-nav-item>
     <page-nav-item href="/faq" linkText="FAQ"></page-nav-item>
 
