Fixed the responsive menu.

--- a/frontend/src/app/pages/base/base.component.sass
+++ b/frontend/src/app/pages/base/base.component.sass
@@ -126,6 +126,9 @@ $header-breakpoint: max-width 40em
       display: none
       margin: 0
 
+      &.visible
+        display: block
+
       &.controls
         display: block
         background-color: darken($lsd_blue, 20%)
