--- a/frontend/src/app/pages/base/base.component.html
+++ b/frontend/src/app/pages/base/base.component.html
@@ -25,27 +25,30 @@
 <div id="navbar">
   <ul>
     <li class="controls">
-      <a href="#">
+      <a (click)="toggleMenu()">
         <i class="fa fa-bars"></i>
-        <span>Show menu</span>
+        <span *ngIf="menuCollapsed">Show menu</span>
+        <span *ngIf="!menuCollapsed">Hide menu</span>
       </a>
     </li>
 
-    <page-nav-item href="/" linkText="Home"></page-nav-item>
-    <page-nav-item href="/about-the-club" linkText="About the club"></page-nav-item>
-    <page-nav-item href="/committee" linkText="Committee"></page-nav-item>
-    <page-nav-item href="/prices" linkText="Prices"></page-nav-item>
-    <page-nav-item href="/faq" linkText="FAQ"></page-nav-item>
+    <page-nav-item href="/" linkText="Home" [collapsed]="menuCollapsed"></page-nav-item>
+    <page-nav-item href="/about-the-club" linkText="About the club" [collapsed]="menuCollapsed"></page-nav-item>
+    <page-nav-item href="/committee" linkText="Committee" [collapsed]="menuCollapsed"></page-nav-item>
+    <page-nav-item href="/prices" linkText="Prices" [collapsed]="menuCollapsed"></page-nav-item>
+    <page-nav-item href="/faq" linkText="FAQ" [collapsed]="menuCollapsed"></page-nav-item>
 
     <li>
       <i class="separator fa fa-ellipsis-v"></i>
     </li>
 
-    <li id="join-lsd-btn">
-      <a href="https://www.luu.org.uk/groups/skydiving/" linkText="Join Leeds Skydivers" class="join-lsd-btn">Join LSD</a>
+    <li id="join-lsd-btn" [ngClass]="{ visible: !menuCollapsed }">
+      <a href="https://www.luu.org.uk/groups/skydiving/" linkText="Join Leeds Skydivers" class="join-lsd-btn">
+        Join LSD
+      </a>
     </li>
 
-    <page-nav-item href="/contact" linkText="Contact"></page-nav-item>
+    <page-nav-item href="/contact" linkText="Contact" [collapsed]="menuCollapsed"></page-nav-item>
 
     <li>
       <i class="separator fa fa-ellipsis-v"></i>
