Fixed home button causing navigation.
Switched to using Angular routerLink.

--- a/frontend/src/app/pages/base/base.component.html
+++ b/frontend/src/app/pages/base/base.component.html
@@ -1,6 +1,6 @@
 <div id="header">
   <div id="header-logo">
-    <a href="/" title="Homepage">
+    <a [routerLink]="['/']" title="Homepage">
       <img src="/assets/images/header.png" alt="Leeds University Skydivers Logo" title="Leeds University Skydivers Logo">
     </a>
   </div>
